replaced commons-cli with jcommander